--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lax</title>
+    <style>
+        @media (max-width:629px){
+            img#bannerimg{
+                display:none;
+            }
+        }
+        header{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
+    <header>Lax</header>
+    <img id="bannerimage" src="images/banner.jpg" width="100%" height="150%" alt="banner">
+    <main>
+        
+    </main>
     
 </body>
 </html>
