--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="images/hammock.jpg" class="card-img-top" alt="hammock">
+          <img src="images/alladin-chair.jpg" class="card-img-top" alt="chair">
           <div class="card-body">
-            <h5 class="card-title">Juniper Indoor Hammock</h5>
+            <h5 class="card-title">Aladdin's Chair</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
               content. This content is a little bit longer.</p>
             <a href="#" class="btn btn-primary">Add to Cart</a>
@@ -68,9 +68,9 @@
 
       <div class="col">
         <div class="card h-100">
-          <img src="images/couch.jpg" class="card-img-top" alt="couch">
+          <img src="images/beauty-beast-dresser.jpg" class="card-img-top" alt="dresser">
           <div class="card-body">
-            <h5 class="card-title">Mooncake Sofa Set</h5>
+            <h5 class="card-title">Beauty & Beast Dresser</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
               content. This content is a little bit longer.</p>
             <a href="#" class="btn btn-primary">Add to Cart</a>
@@ -82,7 +82,8 @@
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
 
 </body>
 
