--- a/product.html
+++ b/product.html
@@ -66,7 +66,7 @@
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="images/flash-couch.jpg" alt="flash-couch">
                 <div class="card-body">
-                    <h5 class="card-title">Green Light Couch</h5>
+                    <h5 class="card-title">Green Light Sofa</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's
                         content.</p>
@@ -78,7 +78,7 @@
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="images/geometric-shelf.jpg" alt="shelf">
                 <div class="card-body">
-                    <h5 class="card-title">Drip Geometric Shelf</h5>
+                    <h5 class="card-title">Drip Geo Shelf</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's
                         content.</p>
