--- a/index.html
+++ b/index.html
@@ -28,6 +28,31 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">LAX</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="login.html">Log In</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="registration.html">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="product.html">Inventory</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="checkout.html">Checkout</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <header>
     <div class="container">
       <img id="bannerimage" src="images/banner.jpg" width="100%" height="150%" alt="banner">
@@ -52,6 +77,7 @@
       sollicitudin sollicitudin, nulla ex efficitur est, sed ornare diam massa ut quam. Quisque rhoncus egestas dolor eu
       vehicula. Vestibulum arcu diam, semper id sodales nec, porta vel libero.
     </p>
+    <h4>Featuring Disney Inspired Items</h4>
 
     <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col">
