edited the page to my liking through styles and css

--- a/product.html
+++ b/product.html
@@ -5,9 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LAX - Products</title>
+    <title>LAX - Inventory</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <style>
+        .centered {
+            position: absolute;
+            top: 22.4%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            border-style: solid;
+            border-color: rgb(15, 66, 15);
+            font-size: xx-large;
+            background-color: rgb(15, 66, 15);
+            color: blanchedalmond
+        }
+
+        header {
+            padding-bottom: 15px;
+        }
+
+        h4 {
+            border-style: ridge;
+            border-color: brown;
+            text-align: center;
+        }
+
+        body {
+            font-family: sans-serif;
+        }
+    </style>
 
 
 </head>
@@ -15,38 +42,45 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">LAX</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="login.html">Log In</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="registration.html">Register</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="product.html">Inventory</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="checkout.html">Checkout</a>
-            </li>
-          </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="login.html">Log In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="registration.html">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="product.html">Inventory</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="checkout.html">Checkout</a>
+                </li>
+            </ul>
         </div>
-      </nav>
+    </nav>
+
+    <header>
+        <div class="container">
+            <img id="bannerimage" src="images/banner.jpg" width="100%" height="150%" alt="banner">
+            <div class="centered">LAX</div>
+        </div>
+    </header>
+    <h4>INVENTORY</h4>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="images/abstract-couch.jpg" alt="pink-couch">
                 <div class="card-body">
                     <h5 class="card-title">Abstract Candy Sofa</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's
-                        content.</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, minima?</p>
                     <a href="#" class="btn btn-primary">Add To Cart</a>
                 </div>
             </div>
@@ -56,9 +90,8 @@
                 <img class="card-img-top" src="images/alladin-chair.jpg" alt="chair">
                 <div class="card-body">
                     <h5 class="card-title">Aladdin's Chair</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's
-                        content.</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, officia.
+                    </p>
                     <a href="#" class="btn btn-primary">Add To Cart</a>
                 </div>
             </div>
@@ -68,9 +101,7 @@
                 <img class="card-img-top" src="images/beauty-beast-dresser.jpg" alt="dresser">
                 <div class="card-body">
                     <h5 class="card-title">Beauty & Beast Dresser</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's
-                        content.</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, iusto?</p>
                     <a href="#" class="btn btn-primary">Add To Cart</a>
                 </div>
             </div>
@@ -80,9 +111,7 @@
                 <img class="card-img-top" src="images/car-sofa.jpg" alt="sofa">
                 <div class="card-body">
                     <h5 class="card-title">Beetle Couch</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's
-                        content.</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, pariatur.</p>
                     <a href="#" class="btn btn-primary">Add To Cart</a>
                 </div>
             </div>
@@ -92,9 +121,7 @@
                 <img class="card-img-top" src="images/flash-couch.jpg" alt="flash-couch">
                 <div class="card-body">
                     <h5 class="card-title">Green Light Sofa</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's
-                        content.</p>
+                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, repellat.</p>
                     <a href="#" class="btn btn-primary">Add To Cart</a>
                 </div>
             </div>
@@ -104,9 +131,7 @@
                 <img class="card-img-top" src="images/geometric-shelf.jpg" alt="shelf">
                 <div class="card-body">
                     <h5 class="card-title">Drip Geo Shelf</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's
-                        content.</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, distinctio?</p>
                     <a href="#" class="btn btn-primary">Add To Cart</a>
                 </div>
             </div>
