--- a/index.html
+++ b/index.html
@@ -12,15 +12,6 @@
         display: none;
       }
     }
-
-    header {
-      text-align: center;
-    }
-
-    p {
-      border-style: ridge;
-
-    }
   </style>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -85,8 +76,7 @@
           <img src="images/alladin-chair.jpg" class="card-img-top" alt="chair">
           <div class="card-body">
             <h5 class="card-title">Aladdin's Chair</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam ipsum libero fuga reprehenderit tenetur! Doloremque.</p>
             <a href="#" class="btn btn-primary">Add to Cart</a>
           </div>
         </div>
@@ -97,8 +87,7 @@
           <img src="images/beauty-beast-dresser.jpg" class="card-img-top" alt="dresser">
           <div class="card-body">
             <h5 class="card-title">Beauty & Beast Dresser</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates nostrum nisi voluptate adipisci consectetur quidem!</p>
             <a href="#" class="btn btn-primary">Add to Cart</a>
           </div>
         </div>
