--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
 
+
 </head>
 
 <body>
@@ -38,15 +39,15 @@
           </ul>
         </div>
       </nav>
-    <section class="vh-100" style="background-color: #9A616D;">
+    <section class="vh-100" style="background-color: rgb(131, 36, 36);">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-xl-10">
                     <div class="card" style="border-radius: 1rem;">
                         <div class="row g-0">
                             <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
-                                    alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                                <img src="images/couple.jpg" alt="login form" class="img-fluid"
+                                    style="border-radius: 1rem 0 0 1rem;" />
                             </div>
                             <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                 <div class="card-body p-4 p-lg-5 text-black">
@@ -88,7 +89,7 @@
                                         </div>
 
 
-                                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? 
+                                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account?
                                             <a href="registration.html" style="color: #393f81;">Register here</a>
                                         </p>
 
